--- a/src/components/DamageDisplay.module.css
+++ b/src/components/DamageDisplay.module.css
@@ -3,13 +3,14 @@
   top: 0px;
   left: 0px;
   /* width: 500px; */
-  height: 140px;
+  height: 100px;
   padding: 20px;
   background: rgba(0,0,0, 0.8); 
   transform: translateX(0px);
   transition: transform 0.1s;
   width: 1024px;
   box-sizing: border-box;
+  text-shadow: 1px 1px 0px #000;
 }
 .healthBarOuter {
   position: relative;
@@ -35,4 +36,88 @@
   position: relative;
   left: 4px;
   top: 1px;
+  text-shadow: 1px 1px 0px #000;
+}
+
+.sct {
+  position: absolute; 
+  top: 130px;
+  left: 280px;
+  height: 100px;
+  width: 200px;
+}
+
+.floatingNumber {
+  position: absolute;
+  bottom: 0px;
+  left: 80px;
+  font-size: 32px;
+  line-height: 12px;
+  animation-duration: 0.7s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
+}
+.floatingNumber:nth-child(1) {
+  animation-name: float1;
+}
+.floatingNumber:nth-child(2) {
+  animation-name: float2;
+}
+.floatingNumber:nth-child(3) {
+  animation-name: float3;
+}
+.dmgFormula {
+  position: absolute;
+    top: 50px;
+    left: 35px;
+    font-size: 24px;
+    line-height: 12px;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
+    animation-name: fade;
+}
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+@keyframes float1 {
+  from {
+    transform: translate(0px, 0px) scale(1);
+    opacity: 1;
+  }
+  
+  to {
+    transform: translate(-30px, -100px) scale(0.5);
+    opacity: 0;
+  }
+}
+@keyframes float2 {
+  from {
+    transform: translate(0px, 0px) scale(1);
+    opacity: 1;
+  }
+  
+  to {
+    transform: translate(30px, -100px) scale(0.5);
+    opacity: 0;
+  }
+}
+@keyframes float3 {
+  from {
+    transform: translate(0px, 0px) scale(1);
+    opacity: 1;
+  }
+  
+  to {
+    transform: translate(0px, -100px) scale(0.5);
+    opacity: 0;
+  }
 }
