--- a/src/index.css
+++ b/src/index.css
@@ -69,5 +69,5 @@ button:focus-visible {
 
 @font-face {
   font-family: "minecraftia";
-  src: url("Minecraftia-Regular.ttf");
+  src: url("/Minecraftia-Regular.ttf");
 }
